# particle_life

./: Cargo.toml
src/: constants.rs  main.rs
src/app/: mod.rs  particle_behaviour.rs  particle_system.rs
