[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53"
piston2d-graphics = "0.43"
pistoncore-glutin_window = "0.70"
piston2d-opengl_graphics = "0.82"
ndarray = "0.15"
rand = "0.8"